# knowledge-mcp

./: .gitignore  LICENSE  README.md  SYSTEM_PROMPT.md  go.mod  go.sum  main.go  pyproject.toml
.hidden/: CLAUDE.md  CODEX.md  GEMINI.md  SYSTEM_PROMPT.md
.knowledge/: index.json  index.yaml
.knowledge/atoms/: K-000001.json  K-000001.yaml  K-000002.json  K-000002.yaml  K-000003.json  K-000003.yaml  K-000004.json  K-000004.yaml  K-000005.json  K-000005.yaml  K-000006.json  K-000006.yaml  K-000007.json  K-000007.yaml  K-000008.json  K-000008.yaml  K-000009.json  K-000009.yaml  K-000010.json  K-000010.yaml  K-000011.yaml  K-000012.yaml  K-000013.yaml  K-000014.yaml
config/: config.go
models/: atom.go
src/knowledge_mcp/: __init__.py  __main__.py  config.py  server.py
src/knowledge_mcp/models/: __init__.py  atom.py  enums.py  index.py
src/knowledge_mcp/storage/: __init__.py  atoms.py  index.py
src/knowledge_mcp/tools/: __init__.py  atoms.py  search.py  upsert.py
storage/: atoms.go  index.go
tests/: __init__.py  conftest.py  test_search.py  test_storage.py  test_upsert.py
tools/: atoms.go  search.go  upsert.go
