[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-mcp"
version = "0.1.0"
description = "MCP server for project-specific knowledge management"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Jakub Wojtowicz" }
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
knowledge-mcp = "knowledge_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
